# UpVoteThisLink

./: .env  Cargo.toml  UpVoteThisLink.sln  init.sql  mydatabase.db  readme.md  stack.yml
.github/workflows/: rust.yml
.gitlab/: workflows
UpVoteThisLink/: AssemblyInfo.fs  Global.asax  TableOperationsModule.fs  UpVoteThisLink.fsproj  packages.config
UpVoteThisLink/Controllers/: CarsController.fs  UVTLController.fs
UpVoteThisLink/Models/: Car.fs
src/: common.rs  endpoints.rs  main.rs  services.rs  sqlstuff.rs  upvotes.rs  url.rs  urlparser.rs
src/endpoints/: urlshortener.rs  utilities.rs  voting.rs
