[package]
name = "up_vote_this_link"
version = "0.1.0"
authors = ["john"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "4"
url = "1.7.2"
serde = {version = "1.0.136", features = ["derive"]  }
serde_json = "1.0.79"
sqlx = {version = "0.6.0", features = [ "runtime-actix-native-tls" , "postgres" ] }
runtime = "0.0.0"
