[package]
name = "up_vote_this_link"
version = "0.1.0"
authors = ["john"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
url = "2.5.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0", features = ["runtime-actix-native-tls", "postgres"] }
runtime = "0.0.0"
sha2 = "0.10.8"
